2010-07-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components/SearchEntry.cs: taken out event
	  handler on destroy.

2010-07-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeCompletion/ListWindow.cs: Fixed 'Bug
	  619800 - Auto-complete of nothing shouldn't auto-complete as
	  void'.

2010-06-29  Carlo Kok  <ck@remobjects.com>

	* MonoDevelop.Ide.Extensions/MimeTypeOptionsPanelNode.cs: Make
	  the label localizable.

2010-06-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Navigation/NavigationHistoryService.cs: When
	  clearing the navigation history, don't reuse the current
	  item since it is destroyed by the clear method. Should fix
	  bug #606557 - Invalid items in history service.

2010-06-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components.Docking/DockItemContainer.cs: Added
	  missing null checks. Fixes bug #613437 - Null Reference
	  Exception on loading a project.

2010-06-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components.Docking/DockBarItem.cs: Don't hide
	  the item if the mouse pointer is inside the window. Fixes
	  bug #565714 - Autohidden pads hide when viewing treeview
	  tooltips.

2010-06-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs:
	  Fixed 'Bug 617382 - Parameter list tooltip is not hidden
	  when pressing ctrl+left arrow'.

2010-06-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeCompletion/CompletionData.cs:
	* MonoDevelop.Ide.CodeCompletion/CompletionListWindow.cs:
	  Fixed 'Bug 616653 - "import symbol" does not resolve full
	  typenames'.

2010-06-21  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Commands/CustomStringTagProvider.cs: Add
	  string tag for the config directory. Implements 615677 -
	  Make the config folder variable available in custom
	  commands.

2010-06-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/ViewCommandHandlers.cs: Only update